# llm-contract-guard

./: .gitignore  README.md  pyproject.toml
examples/: classifier.schema.json  model-outputs.jsonl
src/llm_contract_guard/: __init__.py  __main__.py  cli.py  coerce.py  extractor.py  io.py  report.py  validator.py
tests/: test_extractor.py  test_report.py  test_validator.py
