[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-contract-guard"
version = "0.1.0"
description = "Validate messy LLM JSON outputs against explicit response contracts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["llm", "json", "schema", "validation", "ai-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4.22"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
llm-contract-guard = "llm_contract_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_contract_guard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
